SERVER-2454 Remove trailing whitespace